# Minimalist-Type-Theory-In-Lambda-Prolog

./: .gitignore  .vimrc  123  1231  123123  123trad  123z  LIB_OUTLINE  Makefile  NEWNAMES  OUTLINE  README  build  calc.elpi  calc.mod  calc_Eq.elpi  calc_colSigma.elpi  calc_empty.elpi  calc_ext.elpi  calc_forall.elpi  calc_func.elpi  calc_id.elpi  calc_int.elpi  calc_letIn.mod  calc_nat.elpi  calc_propId.elpi  calc_setPi.elpi  calc_setSum.elpi  calc_simpleProps.elpi  calc_simpleSets.elpi  calc_simple_Props.elpi  calc_singleton.elpi  calc_stuff.elpi  calc_substitution.elpi  cart.elpi  debug.elpi  estentional.elpi  extractor.elpi  interpretation.elpi  log.elpi  (+21 more)
abella/: 1231  NEWNAMES  calc_int.elpi  empty.elpi  qwe.mod  qwe.sig  simpleProps.elpi
books/abella/: condiderazioni  ext.elpi  nat  qwe.elpi
calc/: Eq.elpi  and.elpi  calc_int.elpi  colSigma.elpi  empty.elpi  exist.elpi  forall.elpi  fun.elpi  id.elpi  implies.elpi  letIn.elpi  list.elpi  nat.elpi  or.elpi  propEq.elpi  propId.elpi  setPi.elpi  setSigma.elpi  setSum.elpi  singleton.elpi  trad.elpi
haskell/exp1/: CHANGELOG.md  README.md  package.yaml
haskell/exp1/test-suite/: Main.hs
haskell/exp2/: exp2.cabal
haskell/exp3/: README.md  exp3.cabal
haskell/exp4/: exp4.cabal
old/: fail-eq  qwe2  qweFOLLE  s242
tey/: basic.mod  basic.sig  depend  lists.lp  lists.lpo  lists.mod  lists.sig  main.lp  main.lpo  main.mod  main.sig
